# sentinel-dao

./: README.md
arbitrum-sentinel/src/: lib.rs
arbitrum-sentinel/stylus-verifier/: Cargo.toml
sentinel-contracts/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
sentinel-contracts/contracts/: SentinelToken.sol
sentinel-contracts/ignition/deployments/chain-421614/: deployed_addresses.json  journal.jsonl
sentinel-contracts/ignition/deployments/chain-421614/artifacts/: SentinelFinalModule#SentinelRWA.json
sentinel-contracts/ignition/deployments/chain-421614/build-info/: solc-0_8_28-657bc165d416ca74d234df6e1d5d3b582ab83b4f.json
sentinel-contracts/ignition/modules/: SentinelFinal.ts  SentinelModule.ts
sentinel-contracts/scripts/: manual-deploy.ts  verify-live.ts
sentinel-dashboard/: README.md  package-lock.json  package.json  tailwind.config.ts
sentinel-dashboard/app/: globals.css  layout.tsx  page.tsx
sentinel-dashboard/src/: config.ts  constants.ts  providers.tsx
sentinel-dashboard/src/abis/: SentinelRWA.json
