[package]
name = "stylus-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stylus-sdk = "0.5.1"
mini-alloc = "0.4.2"

# Kita tetap kunci alloy agar stabil, TAPI kita hapus base64ct manual
alloy-primitives = { version = "=0.7.6", default-features = false, features = ["std", "tiny-keccak"] }
alloy-sol-types = { version = "=0.7.6", default-features = false, features = ["std"] }

[features]
export-abi = ["stylus-sdk/export-abi"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"